--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ title: 计科辅导员 # the main title
 tagline: 计科辅导员公众号官方网站 # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
-  秉持黑客精神，
+  计科辅导员公众号官方网站
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: ""
@@ -37,10 +37,11 @@ twitter:
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com # change to your email address
+  name: scfhao
+  email: scfhao@126.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
+    - https://jkfdy.scfhao.cn/
     - https://twitter.com/username # change to your twitter homepage
     - https://github.com/username # change to your github homepage
     # Uncomment below to add more social links
