--- a/_config.yml
+++ b/_config.yml
@@ -26,10 +26,10 @@ description: >- # used by seo meta and the atom feed
   计科辅导员公众号官方网站
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: ""
+url: "https://jkfdy.scfhao.cn"
 
 github:
-  username: github_username # change to your github username
+  username: jkfdy # change to your github username
 
 twitter:
   username: twitter_username # change to your twitter username
@@ -81,7 +81,7 @@ theme_mode: # [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: "/assets/img/avatar/avatar.png"
 
 # boolean type, the global switch for TOC in posts.
 toc: true
