--- a/_config.yml
+++ b/_config.yml
@@ -18,12 +18,12 @@ timezone: Asia/Shanghai
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: 计科辅导员 # the main title
+title: 一个拖延症 # the main title
 
-tagline: 计科辅导员公众号官方网站 # it will display as the sub-title
+tagline: 一个拖延症公众号官方网站 # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
-  计科辅导员公众号官方网站
+  一个拖延症公众号官方网站
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: "https://jkfdy.scfhao.cn"
