--- a/_config.yml
+++ b/_config.yml
@@ -55,7 +55,7 @@ google_ads_client: ca-pub-5741824894497098
 # The end of `jekyll-seo-tag` settings
 
 google_analytics:
-  id: # fill in your Google Analytics ID
+  id: G-WXG0Q19B4R # fill in your Google Analytics ID
   # Google Analytics pageviews report settings
   pv:
     proxy_endpoint: # fill in the Google Analytics superProxy endpoint of Google App Engine
